<resources>
    <string name="app_name">QuizApp</string>
    <string name="answer">Answer Questions : </string>
    <string name="q1">Q1 LinearLayout can be child View ?  </string>
    <string name="q2">Q2 Which is of that are Views ? </string>
    <string name="q3">Q3 If you need to view image which will Use ?</string>
    <string name="q4">Q4 Do this App use neasted Views ? </string>
    <string name="q5">Q5 Main view is ScrollView ? </string>
    <string name="q6">Q6 Do 5+8*2+8 = 34 ? </string>
    <string name="q7">Q7 What result of 28 % 2 ?</string>
</resources>
